# tryx-store-postgres

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
scripts/: build_wheels.py  smoke_test.py  verify_abi.py
src/: __init__.py
src/tryx_store_postgres/: __init__.py  _loader.py
src/tryx_store_postgres/libs/: README.md
tryx-postgres-rs/: Cargo.toml
tryx-postgres-rs/src/: lib.rs  pg.rs  schema.sql
tryx-postgres-rs/tests/: integration.rs
